// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getResultDate renders a Tab 1 (All) date correctly 1`] = `
<p
  className="date"
>
  <strong>
    Published date:
  </strong>
   
  2018-12-18
</p>
`;

exports[`getResultDate renders a Tab 2 (News) date correctly 1`] = `
<p
  className="date"
>
  <strong>
    Published date:
  </strong>
   
  2019-08-01
</p>
`;

exports[`getResultDate renders a Tab 3 (Documents) date correctly 1`] = `
<p
  className="date"
>
  <strong>
    Published date:
  </strong>
   
  2021-03-24
</p>
`;

exports[`getResultDate renders a Tab 4 (Services) date correctly 1`] = `
<p
  className="date"
>
  <strong>
    Published date:
  </strong>
   
  2020-03-31
</p>
`;
